# authal-poc

./: .dockerignore  .env  Dockerfile  Makefile  README.md  docker-compose.yml  heroku.yml  mypy.ini  pyproject.toml
.github/workflows/: tasks.yml
authal/: config.py  domain.py  dto.py  error_handler.py  exceptions.py  main.py
authal/models/: common.py  user_model.py
authal/services/: cat_api.py  common.py
authal/views/: service_view.py  status_view.py  user_view.py
tests/: __init__.py  conftest.py  fixtures.py  test_domain.py
tests/libs/: test_dates.py
tests/models/: test_user_model.py
tests/services/: test_cat_api.py
tests/views/: test_root_view.py  test_service_view.py  test_status_view.py  test_user_view.py
