[tool.poetry]
name = "authal"
version = "0.0.1"
description = "Gengo AI User Management Service"
authors = ["Gengo <dev@gengo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "=0.52.0"
uvicorn = "^0.11.2"
motor = "^2.1"
requests = "^2.23"
httpx = "^0.12.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761.0"
flake8 = "^3.7"
isort = "^4.3"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-watch = "^4.2"
pytest-asyncio = "^0.10.0"
asynctest = "^0.13.0"

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 99
# make it compatible with black:
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
